--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentStart="true"
             android:src="@drawable/baseline_keyboard_arrow_left_24" />
 
-        <EditText
+        <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/img_Back"
