--- a/app/src/main/res/layout/layout_sheet_bottom.xml
+++ b/app/src/main/res/layout/layout_sheet_bottom.xml
@@ -9,6 +9,7 @@
     android:paddingHorizontal="24dp">
 
     <TextView
+        android:id="@+id/tv_Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -19,6 +20,7 @@
         android:textSize="16sp" />
 
     <TextView
+        android:id="@+id/tv_Message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
