fix thông báo, vẫn còn lỗi firebase

--- a/app/src/main/res/layout/item_notify.xml
+++ b/app/src/main/res/layout/item_notify.xml
@@ -21,6 +21,7 @@
             android:text="Thứ 2, 1/1/2023" />
 
         <View
+            android:id="@+id/underView"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
