--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -51,7 +51,7 @@
             android:hint="Nhập mật khẩu" />
 
         <Button
-            android:id="@+id/btn_Login"
+            android:id="@+id/btn_Submit"
             android:layout_width="280dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
