--- a/app/src/main/res/layout/activity_new_pass.xml
+++ b/app/src/main/res/layout/activity_new_pass.xml
@@ -49,7 +49,7 @@
             android:hint="Nhập lại mật khẩu mới" />
 
         <Button
-            android:id="@+id/btn_Login"
+            android:id="@+id/btn_Submit"
             android:layout_width="280dp"
             android:layout_height="50dp"
             android:layout_marginTop="60dp"
