--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -76,7 +76,7 @@
             android:hint="Nhập lại mật khẩu mới" />
 
         <Button
-            android:id="@+id/btn_Login"
+            android:id="@+id/btn_Submit"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="360dp"
