--- a/app/src/main/res/layout/item_handbook.xml
+++ b/app/src/main/res/layout/item_handbook.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="90dp"
+        android:layout_height="90dp">
         <ImageView
             android:id="@+id/img_CamNang"
             android:layout_width="wrap_content"
@@ -47,4 +48,5 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
 </LinearLayout>
