--- a/app/src/main/res/layout/item_help.xml
+++ b/app/src/main/res/layout/item_help.xml
@@ -28,14 +28,13 @@
             android:src="@drawable/arrow_down"/>
     </LinearLayout>
     <TextView
-        android:id="@+id/tv_Reply"
+        android:id="@+id/tv_Content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
         android:layout_marginTop="15dp"
         android:textSize="15sp"
         android:layout_marginBottom="15dp"
-        android:visibility="gone"
         android:textColor="@color/color_Plant_Type"
         android:text="@string/nd1"/>
 
