thêm xoá sửa, ẩn hiện cẩm nang

--- a/app/src/main/res/layout/fragment_view_or_add_handbook.xml
+++ b/app/src/main/res/layout/fragment_view_or_add_handbook.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,6 +92,13 @@
             android:drawableEnd="@drawable/baseline_add_24"
             android:textSize="18sp" />
 
+        <GridLayout
+            android:id="@+id/gridStep"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="1"
+            android:layout_marginBottom="10dp"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -109,6 +117,12 @@
             android:drawableEnd="@drawable/baseline_add_24"
             android:textSize="18sp" />
 
+        <GridLayout
+            android:id="@+id/gridStage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="1"
+            android:layout_marginBottom="10dp"/>
 
 
     </LinearLayout>
