--- a/app/src/main/res/layout/layout_add_hanbook_help.xml
+++ b/app/src/main/res/layout/layout_add_hanbook_help.xml
@@ -1,86 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:cardCornerRadius="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:paddingHorizontal="24dp">
-
-    <TextView
-        android:id="@+id/tv_Title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Bước 1"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textAlignment="center"
-        android:layout_marginVertical="10dp" />
-
-    <TextView
-        android:id="@+id/lb_Step"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Bước 1"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:layout_marginVertical="10dp" />
-    
-    <EditText
-        android:id="@+id/edt_Question"
-        android:hint="Nhập tên bước"
-        android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:layout_height="44dp"
-        android:background="@drawable/background_edt"
-        android:layout_marginBottom="15dp"
-        />
-
-    <TextView
-        android:id="@+id/lb_Content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nội dung"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:layout_marginVertical="10dp" />
-
-    <EditText
-        android:id="@+id/edt_Content"
-        android:hint="Nhập tên bước"
-        android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:layout_height="44dp"
-        android:background="@drawable/background_edt"
-        />
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="40dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:paddingHorizontal="24dp">
 
-        <Button
-            android:id="@+id/btn_Cancel"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="170dp"
-            android:layout_height="50dp"
-            android:text="Huỷ"
-            android:textColor="@color/delete"
-            android:textSize="20dp"
-            app:cornerRadius="8dp" />
+        <TextView
+            android:id="@+id/tv_Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Bước 1"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textAlignment="center"
+            android:layout_marginVertical="10dp" />
 
-        <Button
-            android:id="@+id/btn_Add"
-            android:layout_width="170dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="15dp"
-            android:backgroundTint="@color/green"
-            android:text="OK"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            app:cornerRadius="8dp" />
+        <TextView
+            android:id="@+id/lb_Step"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tên bước"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:layout_marginVertical="10dp" />
+
+        <EditText
+            android:id="@+id/edt_Question"
+            android:hint="Nhập tên bước"
+            android:layout_width="match_parent"
+            android:paddingLeft="10dp"
+            android:layout_height="44dp"
+            android:background="@drawable/background_edt"
+            android:layout_marginBottom="15dp"
+            />
+
+        <TextView
+            android:id="@+id/lb_Content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nội dung"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:layout_marginVertical="10dp" />
+
+        <EditText
+            android:id="@+id/edt_Content"
+            android:hint="Nhập tên bước"
+            android:layout_width="match_parent"
+            android:paddingLeft="10dp"
+            android:layout_height="44dp"
+            android:background="@drawable/background_edt"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_Cancel"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="50dp"
+                android:text="Huỷ"
+                android:textColor="@color/delete"
+                android:textSize="20dp"
+                app:cornerRadius="8dp" />
+
+            <Button
+                android:id="@+id/btn_Add"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="50dp"
+                android:layout_marginLeft="15dp"
+                android:backgroundTint="@color/green"
+                android:text="OK"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                app:cornerRadius="8dp" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+
+
+</androidx.cardview.widget.CardView>
