--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -33,10 +33,11 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rc_help"
+        <GridLayout
+            android:id="@+id/grid_help"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:columnCount="1"
             />
 
         <TextView
