--- a/app/src/main/res/layout/item_help.xml
+++ b/app/src/main/res/layout/item_help.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:paddingVertical="15dp"
     android:paddingHorizontal="24dp">
 
     <RelativeLayout
