--- a/app/src/main/res/layout/item_notify.xml
+++ b/app/src/main/res/layout/item_notify.xml
@@ -102,16 +102,37 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_TB_SoLuongMua"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="1 sản phẩm"
-                android:fontFamily="@font/lato"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                 />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_TB_SoLuongMua"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="1 sản phẩm"
+                    android:fontFamily="@font/lato"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_TB_Status"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Đang giao"
+                    android:fontFamily="@font/lato"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    />
+            </LinearLayout>
 
         </LinearLayout>
 
